--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,21 +1,11 @@
 
-@article{Graham2020,
-title = {{SARS-CoV-2 infection, clinical features and outcome of COVID-19 in United Kingdom nursing homes}},
-journal = "Journal of Infection",
-year = "2020",
-doi = " 10.1016/j.jinf.2020.05.073",
-author = "N.S.N. Graham and C. Junghans and R. Downes and C. Sendall and H. Lai and A. McKirdy and P. Elliott and R. Howard and D. Wingfield and M. Priestman and M. Ciechonska and L. Cameron and M. Storch and M.A. Crone and P.S. Freemont and P. Randell and R. McLaren and N. Lang and S. Ladhani and F. Sanderson and D.J. Sharp"
-}
 
 
-@article {Salcher-Konrad2020,
-	author = {Salcher-Konrad, Maximilian and Jhass, Arnoupe and Naci, Huseyin and Tan, Marselia and El-Tawil, Yousef and Comas-Herrera, Adelina},
-	title = {{COVID-19} related mortality and spread of disease in long-term care: First findings from a living systematic review of emerging evidence},
+@article {Brown2020,
+	author = {Brown, Kevin A and Jones, Aaron and Daneman, Nick and Chan, Adrienne K and Schwartz, Kevin L and Garber, Gary E and Costa, Andrew and Stall, Nathan M},
+	title = {Association Between Nursing Home Crowding and COVID-19 Infection and Mortality in Ontario, Canada},
 	year = {2020},
-	doi = {10.1101/2020.06.09.20125237},
-	publisher = {Cold Spring Harbor Laboratory Press},
-	URL = {https://www.medrxiv.org/content/early/2020/06/09/2020.06.09.20125237},
-	eprint = {https://www.medrxiv.org/content/early/2020/06/09/2020.06.09.20125237.full.pdf},
+	doi = {10.1101/2020.06.23.20137729},
 	journal = {medRxiv}
 }
 
@@ -32,6 +22,14 @@ year = {2020}
 }
 
 
+@article{Graham2020,
+title = {{SARS-CoV-2 infection, clinical features and outcome of COVID-19 in United Kingdom nursing homes}},
+journal = "Journal of Infection",
+year = "2020",
+doi = " 10.1016/j.jinf.2020.05.073",
+author = "N.S.N. Graham and C. Junghans and R. Downes and C. Sendall and H. Lai and A. McKirdy and P. Elliott and R. Howard and D. Wingfield and M. Priestman and M. Ciechonska and L. Cameron and M. Storch and M.A. Crone and P.S. Freemont and P. Randell and R. McLaren and N. Lang and S. Ladhani and F. Sanderson and D.J. Sharp"
+}
+
 @article{KaiWang2020,
 title = {{Temporal profiles of viral load in posterior oropharyngeal saliva samples and serum antibody responses during infection by SARS-CoV-2: an observational cohort study}},
 journal = "The Lancet Infectious Diseases",
@@ -43,10 +41,6 @@ doi = "https://doi.org/10.1016/S1473-3099(20)30196-1",
 author = "Kelvin Kai-Wang To and Owen Tak-Yin Tsang and Wai-Shing Leung and Anthony Raymond Tam and Tak-Chiu Wu and David Christopher Lung and Cyril Chik-Yan Yip and Jian-Piao Cai and Jacky Man-Chun Chan and Thomas Shiu-Hong Chik and Daphne Pui-Ling Lau and Chris Yau-Chung Choi and Lin-Lei Chen and Wan-Mui Chan and Kwok-Hung Chan and Jonathan Daniel Ip and Anthony Chin-Ki Ng and Rosana Wing-Shan Poon and Cui-Ting Luo and Vincent Chi-Chung Cheng and Jasper Fuk-Woo Chan and Ivan Fan-Ngai Hung and Zhiwei Chen and Honglin Chen and Kwok-Yung Yuen"
 }
 
-@unpublished{Easter6,
-title = {{Investigation of SARS-CoV-2 Outbreaks in Six Care Homes in London: The Easter 6 Care Home Investigation}},
-year = 2020,
-author= {Shamez Ladhani and Maria Zambon and Nandini Shetty and Meera Chand and Richard Myers and Mark Driver and Gwyn Morris and Lynne Foster and Kevin Brown and Mary Ramsay and Susan Hopkins and Yimmy Chow and Edward Wynne-Evans and Anita Bell and Emma Crawley-Boevey and Jonathan Fok and Roshni Janarthanan and Amoolya Vusirikala and Elena Fernandez and Marina Sanchez Perez and Suzanne Tang and Kate Dun-Campbell and Karthik Paranthaman and Thomas Ma and Maria Saavedra-Campos and Alex Allen}}
 
 @article{Kucirka2020,
 author = {Kucirka, Lauren M. and Lauer, Stephen A. and Laeyendecker, Oliver and Boon, Denali and Lessler, Justin},
@@ -70,6 +64,19 @@ year = {2020},
 doi = {10.1056/NEJMoa2005412}
 }
 
+@Article{Moraga2020, AUTHOR = { Moraga, P and Ketcheson, DI and Ombao, HC and Duarte, CM}, TITLE = {{Assessing the age- and gender-dependence of the severity and case fatality rates of COVID-19 disease in Spain [version 1; peer review: awaiting peer review] }}, JOURNAL = {Wellcome Open Research}, VOLUME = {5}, YEAR = {2020}, NUMBER = {117}, DOI = {10.12688/wellcomeopenres.15996.1} }
+
+@article {Salcher-Konrad2020,
+	author = {Salcher-Konrad, Maximilian and Jhass, Arnoupe and Naci, Huseyin and Tan, Marselia and El-Tawil, Yousef and Comas-Herrera, Adelina},
+	title = {{COVID-19} related mortality and spread of disease in long-term care: First findings from a living systematic review of emerging evidence},
+	year = {2020},
+	doi = {10.1101/2020.06.09.20125237},
+	publisher = {Cold Spring Harbor Laboratory Press},
+	URL = {https://www.medrxiv.org/content/early/2020/06/09/2020.06.09.20125237},
+	eprint = {https://www.medrxiv.org/content/early/2020/06/09/2020.06.09.20125237.full.pdf},
+	journal = {medRxiv}
+}
+
 @article {Stall2020,
 	author = {Stall, Nathan M. and Jones, Aaron and Brown, Kevin A and Rochon, Paula A and Costa, Andrew P},
 	title = {{For-profit nursing homes and the risk of COVID-19 outbreaks and resident deaths in Ontario, Canada}},
@@ -79,6 +86,7 @@ doi = {10.1056/NEJMoa2005412}
 	eprint = {https://www.medrxiv.org/content/early/2020/05/27/2020.05.25.20112664.full.pdf},
 	journal = {medRxiv}
 }
+
 
 
 # Reports
