--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -30,6 +30,22 @@ doi = " 10.1016/j.jinf.2020.05.073",
 author = "N.S.N. Graham and C. Junghans and R. Downes and C. Sendall and H. Lai and A. McKirdy and P. Elliott and R. Howard and D. Wingfield and M. Priestman and M. Ciechonska and L. Cameron and M. Storch and M.A. Crone and P.S. Freemont and P. Randell and R. McLaren and N. Lang and S. Ladhani and F. Sanderson and D.J. Sharp"
 }
 
+
+@article{He2020,
+author = {He, Xi and Lau, Eric H. Y. and Wu, Peng and Deng, Xilong and Wang, Jian and Hao, Xinxin and Lau, Yiu Chung and Wong, Jessica Y. and Guan, Yujuan and Tan, Xinghua and Mo, Xiaoneng and Chen, Yanqing and Liao, Baolin and Chen, Weilie and Hu, Fengyu and Zhang, Qing and Zhong, Mingqiu and Wu, Yanrong and Zhao, Lingzhai and Zhang, Fuchun and Cowling, Benjamin J. and Li, Fang and Leung, Gabriel M.},
+doi = {10.1038/s41591-020-0869-5},
+issn = {1078-8956},
+journal = {Nature Medicine},
+mendeley-groups = {1 Infectious diseases/COVID19},
+month = {may},
+number = {5},
+pages = {672--675},
+title = {{Temporal dynamics in viral shedding and transmissibility of COVID-19}},
+url = {http://www.nature.com/articles/s41591-020-0869-5},
+volume = {26},
+year = {2020}
+}
+
 @article{KaiWang2020,
 title = {{Temporal profiles of viral load in posterior oropharyngeal saliva samples and serum antibody responses during infection by SARS-CoV-2: an observational cohort study}},
 journal = "The Lancet Infectious Diseases",
@@ -39,6 +55,21 @@ pages = "565 - 574",
 year = "2020",
 doi = "https://doi.org/10.1016/S1473-3099(20)30196-1",
 author = "Kelvin Kai-Wang To and Owen Tak-Yin Tsang and Wai-Shing Leung and Anthony Raymond Tam and Tak-Chiu Wu and David Christopher Lung and Cyril Chik-Yan Yip and Jian-Piao Cai and Jacky Man-Chun Chan and Thomas Shiu-Hong Chik and Daphne Pui-Ling Lau and Chris Yau-Chung Choi and Lin-Lei Chen and Wan-Mui Chan and Kwok-Hung Chan and Jonathan Daniel Ip and Anthony Chin-Ki Ng and Rosana Wing-Shan Poon and Cui-Ting Luo and Vincent Chi-Chung Cheng and Jasper Fuk-Woo Chan and Ivan Fan-Ngai Hung and Zhiwei Chen and Honglin Chen and Kwok-Yung Yuen"
+}
+
+
+@article{Kimball2020,
+author = {Kimball, Anne and Hatfield, Kelly M. and Arons, Melissa and James, Allison and Taylor, Joanne and Spicer, Kevin and Bardossy, Ana C. and Oakley, Lisa P. and Tanwar, Sukarma and Chisty, Zeshan and Bell, Jeneita M. and Methner, Mark and Harney, Josh and Jacobs, Jesica R. and Carlson, Christina M. and McLaughlin, Heather P. and Stone, Nimalie and Clark, Shauna and Brostrom-Smith, Claire and Page, Libby C. and Kay, Meagan and Lewis, James and Russell, Denny and Hiatt, Brian and Gant, Jessica and Duchin, Jeffrey S. and Clark, Thomas A. and Honein, Margaret A. and Reddy, Sujan C. and Jernigan, John A. and Baer, Atar and Barnard, Leslie M. and Benoliel, Eileen and Fagalde, Meaghan S. and Ferro, Jessica and Smith, Hal Garcia and Gonzales, Elysia and Hatley, Noel and Hatt, Grace and Hope, Michaela and Huntington-Frazier, Melinda and Kawakami, Vance and Lenahan, Jennifer L. and Lukoff, Margaret D. and Maier, Emily B. and McKeirnan, Shelly and Montgomery, Patricia and Morgan, Jennifer L. and Mummert, Laura A. and Pogosjans, Sargis and Riedo, Francis X. and Schwarcz, Leilani and Smith, Daniel and Stearns, Steve and Sykes, Kaitlyn J. and Whitney, Holly and Ali, Hammad and Banks, Michelle and Balajee, Arun and Chow, Eric J. and Cooper, Barbara and Currie, Dustin W. and Dyal, Jonathan and Healy, Jessica and Hughes, Michael and McMichael, Temet M. and Nolen, Leisha and Olson, Christine and Rao, Agam K. and Schmit, Kristine and Schwartz, Noah G. and Tobolowsky, Farrell and Zacks, Rachael and Zane, Suzanne},
+doi = {10.15585/mmwr.mm6913e1},
+issn = {0149-2195},
+journal = {MMWR. Morbidity and Mortality Weekly Report},
+month = {apr},
+number = {13},
+pages = {377--381},
+title = {{Asymptomatic and Presymptomatic SARS-CoV-2 Infections in Residents of a Long-Term Care Skilled Nursing Facility — King County, Washington, March 2020}},
+url = {http://www.cdc.gov/mmwr/volumes/69/wr/mm6913e1.htm?s{\_}cid=mm6913e1{\_}w},
+volume = {69},
+year = {2020}
 }
 
 
@@ -88,8 +119,29 @@ doi = {10.1056/NEJMoa2005412}
 }
 
 
+@article{Zhou2020,
+author = {Zhou, Fei and Yu, Ting and Du, Ronghui and Fan, Guohui and Liu, Ying and Liu, Zhibo and Xiang, Jie and Wang, Yeming and Song, Bin and Gu, Xiaoying and Guan, Lulu and Wei, Yuan and Li, Hui and Wu, Xudong and Xu, Jiuyang and Tu, Shengjin and Zhang, Yi and Chen, Hua and Cao, Bin},
+doi = {10.1016/S0140-6736(20)30566-3},
+issn = {01406736},
+journal = {The Lancet},
+month = {mar},
+number = {10229},
+pages = {1054--1062},
+title = {{Clinical course and risk factors for mortality of adult inpatients with COVID-19 in Wuhan, China: a retrospective cohort study}},
+volume = {395},
+year = {2020}
+}
 
 # Reports
+
+@report{dhICguideline2020,
+year = 2020,
+author = {{UK Department of Health & Social Care}},
+title= {{Admission and Care of Residents in a Care Home during COVID-19. Version 2. Updated 19 June 2020}},
+url={https://www.gov.uk/government/publications/coronavirus-covid-19-admission-and-care-of-people-in-care-homes},
+note = {Accessed 2020-07-05}
+}
+
 
 @report{cisbulletin2020,
 author = {{England Office for National Statistics}},
@@ -110,6 +162,13 @@ author = {{UK Department of Health & Social Care}},
 title = {{Press release: Government launches new portal for care homes to arrange coronavirus testing}},
 url = {https://webarchive.nationalarchives.gov.uk/20200616160922/https://www.gov.uk/government/news/government-launches-new-portal-for-care-homes-to-arrange-coronavirus-testing},
 note = {Accessed: 2020-06-19}
+}
+
+@misc{dhscRegularTesting2020,
+author = {{UK Department of Health & Social Care}},
+title = {{Press release: Regular retesting rolled out for care home staff and residents}},
+url = {https://www.gov.uk/government/news/regular-retesting-rolled-out-for-care-home-staff-and-residents},
+note = {Accessed: 2020-07-05}
 }
 
 @misc{hscni2020,
@@ -140,14 +199,28 @@ note = {Accessed: 2020-06-17}
 @report{onsDR2020,
 author = {{England Office for National Statistics}},
 year = 2020,
-title = {{Deaths involving COVID-19 in the care sector, England and Wales: deaths occurring up to 1 May 2020 and registered up to 9 May 2020 (provisional)}},
-url = {https://webarchive.nationalarchives.gov.uk/20200607080706/https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/articles/deathsinvolvingcovid19inthecaresectorenglandandwales/deathsoccurringupto1may2020andregisteredupto9may2020provisional},
-note = {Accessed: 2020-06-07}}
+title = {{Deaths involving COVID-19 in the care sector, England and Wales: deaths occurring up to 12 June 2020 and registered up to 20 June 2020 (provisional)}},
+url = {https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/articles/deathsinvolvingcovid19inthecaresectorenglandandwales/deathsoccurringupto12june2020andregisteredupto20june2020provisional},
+note = {Accessed: 2020-07-05}}
+
+@website{CQC2020stats,
+author = {{England Care Quality Commission}}},
+year = 2020,
+title = {{Inclusion of CQC data in ONS deaths reporting shows impact of COVID-19 on social care}},
+url = {https://webarchive.nationalarchives.gov.uk/20200616055334/https://www.cqc.org.uk/news/stories/inclusion-cqc-data-ons-deaths-reporting-shows-impact-covid-19-social-care},
+note = {Accessed: 2020-07-05}}
+
+@report{onsVivaldi2020,
+author = {{England Office for National Statistics}},
+year = 2020,
+title = {{Impact of coronavirus in care homes in England (Vivaldi): 26 May to 19 June 2020}},
+url = {https://www.ons.gov.uk/peoplepopulationandcommunity/healthandsocialcare/conditionsanddiseases/articles/impactofcoronavirusincarehomesinenglandvivaldi/26mayto19june2020/previous/v1},
+note = {Accessed: 2020-07-05}}
 
 # Software
 
 @misc{Dutey2020,
- title={{Incidence and period prevalence ofCOVID-19 cases in care home staff and residents at Four Seasons Health Care (England, Scotland, Northern Ireland)}},
+ title={{Incidence and period prevalence of Covid-19 cases in care home staff and residents at Four Seasons Health Care (England, Scotland, Northern Ireland)}},
  url={https://github.com/peterdutey/ch-covid19},
  publisher={Code repository},
  author={Dutey-Magni, Peter},
