--- a/vignettes/validation.Rmd
+++ b/vignettes/validation.Rmd
@@ -29,6 +29,7 @@ st_options(
 )
 source("../.Rprofile")
 devtools::load_all("..")
+library(dplyr)
 library(ggplot2)
 load_data()
 date_min <- as.Date("2020-03-02")
@@ -46,7 +47,7 @@ home_inclusion <- unique(tline$home_code)
 
 reference_homes <- reference_homes %>% 
   dplyr::filter(home_code %in% home_inclusion) %>% 
-  dplyr::left_join(select(reference_geography, postcode, country, region_UK), by = "postcode")
+  dplyr::left_join(dplyr::select(reference_geography, postcode, country, region_UK), by = "postcode")
 
 incidents <- incidents %>% 
   filter(dplyr::between(incident_date, date_min, date_max)) %>% 
@@ -372,3 +373,11 @@ ggplot(data = ch_data_all, aes(x = tally_confirmed, y = datix_confirmed)) +
     values = c(1, 3)) 
 
 ```
+
+
+## Estimating the cumulative incidence of cases and resident-days at risk
+
+Manager-reported outbreak surveillance counts were used together with occupancy estimated from weekly occupied bed censuses in order to estimate the incidence of cases across time using a Kaplan-Meier life table product limit estimator. As the total exposed-to-risk (susceptible resident-days) was unknown, it was approximated in a multiple decrements life table by making the assumption that previously symptomatic/confirmed residents were discharged at the same rate as susceptible residents, as was suggested by the individual-level records. Admitted cases were accounted for in the daily new case count. Based on this $\hat{I_t}$, the estimated number or previously symptomatic/confirmed residents present in the home on day $t$ was computed as
+
+$$\hat{I_t} = min(n_{t}/n_{t-1}, 1)( \hat{E}_{t-1} + d_{t-1}); \qquad  \qquad  \qquad I_{t_0} = 0$$
+where $d_{t}$ denotes the number of new cases for each day $t = \{0, \ldots, T\}$, while $min(n_{t}/n_{t-1}, 1)$ acts as an (underestimated) approximation of the discharge rate. The total exposure time was calculated as $\sum_{t=0}^{T} (N_t-\hat{I}_t)$ where $N_t$ denotes daily occupancy figures. 
